src/objects/FAQ__kav.object
<CustomObject><fields>
        <fullName>Approval_Queue__c</fullName>
        <inlineHelpText>Select the approval queue for this FAQ.</inlineHelpText>
        <label>Approval Queue</label>
        <picklist>
            <picklistValues>
                <fullName>Enforcement &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry &amp; Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Atom Approver</description>
        <inlineHelpText>Atom Approver</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FAQs</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Atom__c</fullName>
        <inlineHelpText>Enter your answer to the Frequently Ask Question</inlineHelpText>
        <label>Answer</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <description>Days since Last Published Date</description>
        <formula>TODAY() -  DATEVALUE(LastPublishedDate)</formula>
        <inlineHelpText>Days since Last Published Date</inlineHelpText>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box, if your document is ready to go into workflow. If you're completely satisfied with your draft, then click "Submit for Approval" button.</description>
        <inlineHelpText>Flag the draft version is ready for approval</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Level_0__c</fullName>
        <label>Level 0</label>
        <picklist>
            <picklistValues>
                <fullName>Related FAQs</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_1__c</fullName>
        <label>Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Mobile_Title__c</fullName>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Public_URL__c</fullName>
        <description>Public URL</description>
        <formula>HYPERLINK($Label.export_gov&amp;"/article?id="&amp;UrlName, $Label.export_gov&amp;"/article?id="&amp;UrlName)</formula>
        <inlineHelpText>Public URL</inlineHelpText>
        <label>Public URL</label>
        <type>Text</type>
    </fields><fields>
        <fullName>References__c</fullName>
        <description>References</description>
        <inlineHelpText>References</inlineHelpText>
        <label>References (Public)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Creates relationship to Series</description>
        <inlineHelpText>Type a keyword and click the magnifying glass to search available Series.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>FAQ</value>
            </filterItems>
            <infoMessage>Type a keyword search to find available FAQ Series.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>FAQs</relationshipLabel>
        <relationshipName>FAQs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of a FAQ through an approval process</description>
        <inlineHelpText>Stage is the phase of the process that your content is in.</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>FAQs</relationshipLabel>
        <relationshipName>FAQs</relationshipName>
        <type>Lookup</type>
    </fields><articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Knowledge Managment template for Frequently Asked Questions.</description><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><label>FAQ</label><pluralLabel>FAQs</pluralLabel><validationRules>
        <fullName>Required_Level_0</fullName>
        <active>true</active>
        <description>Level 0 is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Level_0__c))</errorConditionFormula>
        <errorMessage>Please pick Level 0 (Mandatory field)</errorMessage>
    </validationRules></CustomObject>